# dj-pr3

./: README.md  pyproject.toml
src/: requirements.txt
src/goods/: admin.py  models.py  serializers.py  urls.py  views.py
src/goods/migrations/: 0001_initial.py
src/project/: settings.py  urls.py
