[tool.poetry]
name = "dj-pr3"
version = "0.1.0"
description = ""
authors = ["Mikhail Postnikov <postnikovmu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
